Templates - Fixed issues with codemirror (#37)
- Search bar was not visible because of missing css file.
- Warnings/errors were not visible because of z-index.
- ES6 was not supported with lint.
- SCSS was nog supported with lint.

--- a/FrontEnd/Modules/Templates/Css/Templates.css
+++ b/FrontEnd/Modules/Templates/Css/Templates.css
@@ -182,7 +182,7 @@
     flex-wrap: wrap;
 }
 
-    .advanced-panel .item-left .item {
+    .advanced-panel .item-left .item:not(.full-width) {
         width: 50%;
     }
 
@@ -456,4 +456,8 @@
 
 .html-source-window .CodeMirror {
     height: calc(100vh - 168px);
+}
+
+.CodeMirror-lint-tooltip {
+    z-index: 20000 !important;
 }
